--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -47,3 +47,41 @@
   background-color: #90bd42;
   bottom: 0;
 }
+
+// склади
+
+.werehouseWrap{
+  display: flex;
+  align-items: center;
+  .werehouseImg{
+    img{
+      width: 170px;
+    }
+  }
+  .werehouseBuildings{
+    .werehouseBuildings_img{
+      position: relative;
+      img{
+        cursor: pointer;
+        width: 70px;
+      }
+    }
+    .building_wrap{
+      
+      border: 1px solid #8f6b3c;
+      border-radius: 10px;
+      display: flex;
+      padding-right: 10px;
+      p{
+        white-space: nowrap;
+      }
+    }
+    .allBuildings{
+      background: rgb(206, 197, 118);
+      padding: 6px;
+      position: absolute;
+      top: 0px;
+      left: 80px;
+    }
+  }
+}
