--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -18,7 +18,7 @@
   border: 1px solid;
   border-radius: 20px;
   margin: 0 5px;
-  height: 84px;
+  height: 97px;
 
   span {
     text-align: center;
@@ -28,6 +28,17 @@
     border: 1px solid #000;
     border-radius: 20px
   }
+
+  .tikResource {
+    height: 10px;
+    line-height: 10px;
+    width: fit-content;
+    color: green;
+    padding: 1px 15px;
+    margin: 3px auto;
+    font-size: 15px;
+  }
+
 
   &:first-child {
     .capacityWrap {
@@ -83,7 +94,7 @@
       display: flex;
       padding-right: 10px;
       margin: 2px 0;
-      
+
 
       .small_img {
         width: 17px;
@@ -110,8 +121,10 @@
   display: flex;
   flex-direction: column;
   margin-left: 10px;
+
   .resourcesNeed {
     width: 100px;
+
     p.small {
       display: inline-block;
       margin: 0;
